# MVGE-Mapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  keysender.cpp  keysender.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc  setkeydialog.cpp  setkeydialog.hpp  udplistener.cpp  udplistener.hpp  x11sender.cpp  x11sender.hpp
.github/: FUNDING.yml
KeySenders/: basekeysender.cpp  basekeysender.hpp  mackeysender.cpp  mackeysender.hpp  mskeysender.cpp  mskeysender.hpp  uinputkeysender.cpp  uinputkeysender.hpp  xlibkeysender.cpp  xlibkeysender.hpp
